# techa

./: .gitignore  CLAUDE.md  README.md  config.json  prova_agemts.py  prova_pattern.py  pyproject.toml  techa_guide.ipynb  test.ipynb  test_agents_refactor.py
.claude/: insurance-agent-roadmap.md  settings.local.json
.claude/rules/: coding-agents.md  coding-indicators.md  coding-ma-breakout.md  coding-patterns.md  debugging-rules.md  test-failing-rules.md  test-rules.md
communities/: 01_code_platforms.md  02_ai_apis_models.md  03_ml_communities.md  04_deploy_ship.md  05_discussion_forums.md  INDEX.md
techa/: __init__.py  utils.py
techa/actuarial/: __init__.py
techa/agents/: AGENTS_CODE.md  DYNAMIC_PATTERNS_REVIEW.md  _common.py  _llm.py  schema.py
techa/breakout/: __init__.py  bo_snapshot.py  range_quality.py  range_quality_interrogation_report.md  range_quality_plot.py  swing_range_quality.py  volume.py
techa/claims/: __init__.py  _adapter.py  documentation.py  fraud_indicators.py  medical_coherence.py  severity.py  snapshot.py  timeline.py
techa/indicators/: PLAN.md  __init__.py  _adapter.py  aggregation.py  group_snapshot.py  grouping.py  momentum.py  snapshot.py  trend.py  volatility.py  volume.py
techa/insurance/: __init__.py  _adapter.py  growth.py  profitability.py  reserves.py  snapshot.py
techa/ma/: __init__.py  ma_snapshot.py  trend_quality.py  volume.py
techa/patterns/: __init__.py  __main__.py  _registry.py  explorer.py  scanner.py
techa/underwriting/: __init__.py  _adapter.py  biometrics.py  cardiovascular.py  conditions.py  lifestyle.py  (+3 more)
(+66 files in other folders)
