[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "techa"
version = "0.1.0"
description = "Technical analysis library — TA-Lib-backed indicators, candlestick patterns, MA trends, and breakout analytics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "laceto" }]

# NOTE: ta-lib requires the TA-Lib C library installed on the system first.
# Windows: download the wheel from https://github.com/ta-lib/ta-lib-python/releases
# Linux:   apt install libta-lib-dev  (or build from source)
# macOS:   brew install ta-lib
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "ta-lib>=0.4.0",
    "yfinance>=0.2",
    "mplfinance>=0.12",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter",
]

[project.scripts]
techa-patterns = "techa.patterns.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["techa*"]
